# cstrike-basehook-linux

./: CMakeLists.txt  README.md
include/cstrike/: cstrike.h
include/cstrike/Classes/: CBaseHandle.h  CGlobalVarsBase.h  CInput.h  CShowPixelsParams.h  CUserCmd.h  ClientClass.h  IClientEntity.h  IClientNetworkable.h  IClientRenderable.h  IClientThinkable.h  IClientUnknown.h  ICollideable.h  IHandleEntity.h  Interface.h  RecvTable.h
include/cstrike/Definitions/: Buttons.h  Const.h  Flags.h  Input.h
include/cstrike/Interfaces/: IBaseClientDLL.h  IClientEntityList.h  ICvar.h  IEngineVGui.h  IGameEventManager2.h  IInputInternal.h  IInputSystem.h  ILauncherMgr.h  IMaterialSystem.h  IPanel.h  ISurface.h  IVDebugOverlay.h  IVEngineClient.h  IVModelInfo.h  IVModelRender.h
include/cstrike/Structures/: Color.h  Matrix.h  PlayerInfo.h  Vector.h
include/cstrike/Utilities/: CRC32.h  Virtuals.h
include/vmthook/: vmthook.h
src/: Basehook.cpp  Basehook.h
src/Events/: TestListener.h
src/GUI/: Components.cpp  GUI.cpp  GUI.h
src/Game/: Entity.h
src/Hooks/: CreateMove.cpp  DrawModelExecute.cpp  FrameStageNotify.cpp  Hooks.h  Paint.cpp  PaintTraverse.cpp  PumpWindowsMessageLoop.cpp  SetKeyCodeState.cpp  SetMouseCodeState.cpp  ShowPixels.cpp
src/Utilities/: FindPattern.h  Interfaces.h  Linker.cpp  Linker.h  NetVars.h
